--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-environ>=0.12.0",
     "djangorestframework>=3.16.1",
     "drf-spectacular>=0.28.0",
+    "pillow>=11.3.0",
     "psycopg[binary]>=3.2.10",
 ]
 
